Fixed: Bug 38004 - flag popup opens in invisible area
Use an overlay for the dropdown to be always in the visible area.

(cherry picked from commit 6e66f844ff9f7ffc8da3f06ba4e41077ba9f526e)

Conflicts:
	ui/apps/io.ox/core/extPatterns/links.js
	ui/apps/io.ox/mail/detail/view.js
	ui/apps/themes/components/dropdown.less

Hints for merging back:
The conflicts in ui/apps/io.ox/core/extPatterns/links.js and ui/apps/io.ox/mail/detail/view.js happened due to older code in 7.6.1

The file ui/apps/themes/components/dropdown.less does not exist in 7.6.1. Therefore, any changes of that file were copied to ui/apps/themes/style.less.

--- a/ui/apps/themes/style.less
+++ b/ui/apps/themes/style.less
@@ -3792,6 +3792,21 @@ a.toolbar-action, .toolbar-action > a {
     margin-top: 6px;
 }
 
+.smart-dropdown-container {
+    ul {
+        position: fixed;
+        overflow-y: auto;
+        z-index: 10002;
+    }
+
+    .abs {
+        overflow: hidden;
+        z-index: 10001;
+        position: fixed;
+        cursor: default;
+    }
+}
+
 /** BOOTSTRAP FIXES **/
 
 .label.pointer {
